Fixed logo style on mobile viewport

--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -62,7 +62,7 @@
 }
 
 @media only screen and (max-width: 768px)  {
-    .logo {
+    .navbar-brand {
         display:none;
     }
 }
